Correction Orthographe et overflow commandes options

--- a/web/css/stylePanier.css
+++ b/web/css/stylePanier.css
@@ -20,6 +20,8 @@
 	background-color: rgba(0,0,0,0.89);
 	color: white;
 	z-index: 10000000;
+	overflow-y: auto;
+	overflow-x: none;
 }
 
 .choiceBoxes, .choiceBoxes2{
